--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@shopify/react-native-skia": "0.1.139",
     "d3": "^7.6.1",
     "expo": "~46.0.3",
+    "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -22,7 +23,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "expo-splash-screen": "~0.16.1"
+    "svg-path-properties": "^1.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
