--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/elements": "^1.3.4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@shopify/react-native-skia": "0.1.139",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.12.2",
     "d3": "^7.6.1",
+    "d3-shape": "^3.1.0",
     "expo": "~46.0.8",
     "expo-dev-client": "~1.2.1",
     "expo-splash-screen": "~0.16.1",
