--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "@react-navigation/elements": "^1.3.4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "@shopify/react-native-skia": "0.1.139",
+    "@shopify/react-native-skia": "0.1.141",
     "@visx/scale": "^2.2.2",
     "@visx/shape": "^2.12.2",
     "d3": "^7.6.1",
     "d3-shape": "^3.1.0",
     "expo": "~46.0.8",
-    "expo-dev-client": "~1.2.1",
-    "expo-splash-screen": "~0.16.1",
+    "expo-dev-client": "~1.3.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
